--- a/A1 Evo MJ_Custom.html
+++ b/A1 Evo MJ_Custom.html
@@ -10729,7 +10729,7 @@ zip.file("_micCal.txt", micCal);
         if (noInversion && invertB) { continue; };
         if ((tempLo > 0 && delayB < tempLo) || (tempHi < 0 && delayB > tempHi)) { continue; };
 
-        const tempSum = await fetchAlign('aligned-frequency-response');
+        const tempSum = await fetchAlign(`aligned-frequency-response?smoothing=1%2F48&ppo=${ppo}`);
         let startFreq = tempSum.startFreq;
         let k1 = start, k2 = end;
         if ('freqStep' in tempSum) {
@@ -10773,7 +10773,7 @@ zip.file("_micCal.txt", micCal);
       }
       return [isPossible, requiredDelay, isInverted, excessPhase];
     }
-    async function alignMsub(ind1, ind2, loDelay, hiDelay, start=20, end=100) {
+    async function alignMsub(ind1, ind2, loDelay, hiDelay, start=20, end=100, ppo=96) {
       let isInverted = false, isPossible = false, requiredDelay = NaN, sumIndex = null, bestFreq = NaN, curr_score = -Infinity, best_score = curr_score;
       await postSafe("http://localhost:4735/alignment-tool/index-a", ind1, "selected as measurement A");
       await postSafe("http://localhost:4735/alignment-tool/index-b", ind2, "selected as measurement B");
@@ -10799,7 +10799,7 @@ zip.file("_micCal.txt", micCal);
               (arr.length)
           );
         }
-        const tempSum = await fetchAlign('aligned-frequency-response');
+        const tempSum = await fetchAlign(`aligned-frequency-response?smoothing=1%2F48&ppo=${ppo}`);
         let startFreq = tempSum.startFreq;
         let k1 = start, k2 = end;
         if ('freqStep' in tempSum) {
