--- a/A1 Evo MJ_Custom.html
+++ b/A1 Evo MJ_Custom.html
@@ -10615,9 +10615,9 @@ zip.file("_micCal.txt", micCal);
       const targetResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=${ppo}`, mCount + 1);
       startFreq = targetResponse.startFreq;
       let k1 = start, k2 = end;
-      ppo = targetResponse.ppo;
-      k1 = Math.round(Math.log2(k1 / startFreq) * ppo);
-      k2 = Math.round(Math.log2(k2 / startFreq) * ppo);
+      const targetResponsePpo = targetResponse.ppo;
+      k1 = Math.round(Math.log2(k1 / startFreq) * targetResponsePpo);
+      k2 = Math.round(Math.log2(k2 / startFreq) * targetResponsePpo);
       const bytesTarget = Uint8Array.from(atob(targetResponse.magnitude), c => c.charCodeAt(0));
       const bufferTarget = bytesTarget.buffer;
       const dataTarget = new DataView(bufferTarget);
