--- a/A1 Evo MJ_Custom.html
+++ b/A1 Evo MJ_Custom.html
@@ -10111,7 +10111,7 @@ zip.file("_micCal.txt", micCal);
     }
     async function optimizeSubDelay() {
       let minSum = Infinity, subMoves = NaN;
-      let isPossibleI = false, requiredDelayI = NaN, isInverted = false, excessPhaseI = NaN;
+      let isPossibleI = false, requiredDelayI = NaN, isInverted = false;
       const measurements = await fetch_mREW();
       const mCount = Object.keys(measurements).length;
       let eqResults = [], xoSum = 0, xoAvg = 80;
@@ -10151,7 +10151,7 @@ zip.file("_micCal.txt", micCal);
       await postNext('Generate predicted measurement', mCount);
       await postNext('Smooth', mCount + 2, { smoothing: "1/48" });
       await postNext('Smooth', mCount + 3, { smoothing: "1/48" });
-      [isPossibleI, requiredDelayI, isInverted, excessPhaseI] = await align4system(mCount + 2, mCount + 3);
+      [isPossibleI, requiredDelayI, isInverted] = await align4system(mCount + 2, mCount + 3);
       if (isPossibleI) {
         subMoves = requiredDelayI;
       }
@@ -10217,18 +10217,7 @@ zip.file("_micCal.txt", micCal);
     async function rmsOfXO(noM, start=20, end=250, ppo=96) {
       const targetArray = await getTargetArray(start, end, ppo);
       const freqResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=${ppo}`, noM);
-      let startFreq = freqResponse.startFreq;
-      let k1 = start, k2 = end;
-      k1 = Math.round(Math.log2(k1 / startFreq) * ppo);
-      k2 = Math.round(Math.log2(k2 / startFreq) * ppo);
-      const bytes = Uint8Array.from(atob(freqResponse.magnitude), c => c.charCodeAt(0));
-      const buffer = bytes.buffer;
-      const data = new DataView(buffer);
-      let aSumArray = []
-      for (let k = k1; k <= k2; k++) {
-        const splSum = data.getFloat32(k * 4);
-        aSumArray.push(splSum);
-      }
+      const aSumArray = response2array(freqResponse, start, end);
       return calculateRmsError(aSumArray, targetArray);
     }
     async function finalizeXO() {
@@ -10495,8 +10484,8 @@ zip.file("_micCal.txt", micCal);
       }
       return { alignmentResults, finalIndex: sumIndex };
     }
-    async function tectonic() {
-      let isPossibleI = false, requiredDelayI = NaN, isInverted = false, excessPhaseI = NaN;
+    async function tectonic(start=20, end=100, ppo=96) {
+      let isPossibleI = false, requiredDelayI = NaN, isInverted = false;
       let maxSubVolume = 0, minSubVolume = 0;
       for (let i = nSpeakers; i <= (nSpeakers + numSub - 1); i++) {
         await genSub(250, i);
@@ -10524,12 +10513,12 @@ zip.file("_micCal.txt", micCal);
       let finalIndices = [];
       let finalResults = [];
       for (const configSub of subOrder) {
+        console.log(`Testing sub array config: [${configSub}]`);
         const result = await multipleSubs(configSub);
         const { finalIndex, alignmentResults } = result;
         if (finalIndex === null) {
           console.warn("No alignment possible for this configuration:", configSub);
         } else {
-          console.info(`Sub array: [${configSub}]`);
           finalIndices.push(finalIndex);
           finalResults.push(finalIndex, configSub, alignmentResults);
         }
@@ -10540,18 +10529,21 @@ zip.file("_micCal.txt", micCal);
         console.log("Please identify the reason and fix excessive delays in one or more of your subs then repeat Audyssey calibration!");
         throw new error;
       }
-      let bestEP = Infinity, bestI, iCount = 1, bestCount = null;
+      let bestScore = -Infinity, bestI, iCount = 1, bestCount = null;
       for (const index of finalIndices) {
         if (index !== null) {
-          const epSum = await calcEP(index);
-          if (epSum < bestEP) { bestEP = epSum; bestI = index; bestCount = iCount; }
-          console.info(`Configuration #${iCount} average bass region excess phase: ${epSum.toFixed(2)}°`);
+          const tempSumEP = await calcEP(index);
+          const tempSum = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=${ppo}`, index);
+          const tempSumArray = response2array(tempSum, start, end);
+          const currScore = calculateLinearityScore(tempSumArray) / tempSumEP;
+          if (bestScore < currScore) { bestScore = currScore; bestI = index; bestCount = iCount; }
+          console.info(`Configuration #${iCount} linearity score: ${currScore.toFixed(2)}`);
           iCount++;
         }
       }
       const targetIndex = finalResults.indexOf(bestI);
       const configurationArray = finalResults[targetIndex + 1];
-      console.info(`Optimal selection: Configuration #${bestCount} [${configurationArray}] with ${(bestEP).toFixed(2)}° average excess phase.`);
+      console.info(`Optimal selection: Configuration #${bestCount} [${configurationArray}] with ${(bestScore).toFixed(2)} linearity score.`);
       invertSub[nSpeakers + configurationArray[0]] = false;
       for (let i = 0; i < (numSub - 1); i++) {
         const requiredDelayIValue = finalResults[targetIndex + 2][i].requiredDelayI;
@@ -10581,29 +10573,30 @@ zip.file("_micCal.txt", micCal);
       maxNegative = (msecMin - msecMinSub) * 1000;
       maxPositive = (msecMax - msecMaxSub) * 1000;
     }
-    async function getTargetArray(start, end, ppo=96) {
-      const measurements = await fetch_mREW();
-      const mCount = Object.keys(measurements).length;
-      await fetchSafe('target-level', 1, 75.0);
-      await postNext('Generate target measurement', 1);
-      const targetArray = [];
-      const targetResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=${ppo}`, mCount + 1);
-      startFreq = targetResponse.startFreq;
+    function response2array(response, start, end, phase=false) {
+      let startFreq = response.startFreq;
       let k1 = start, k2 = end;
-      const targetResponsePpo = targetResponse.ppo;
-      k1 = Math.round(Math.log2(k1 / startFreq) * targetResponsePpo);
-      k2 = Math.round(Math.log2(k2 / startFreq) * targetResponsePpo);
-      const bytesTarget = Uint8Array.from(atob(targetResponse.magnitude), c => c.charCodeAt(0));
-      const bufferTarget = bytesTarget.buffer;
-      const dataTarget = new DataView(bufferTarget);
-      for (k = k1; k <= k2; k++) {
-        const splTarget = dataTarget.getFloat32(k * 4)
-        targetArray.push(splTarget);
+      if ('freqStep' in response) {
+        const freqStep = response.freqStep;
+        k1 = Math.round((k1 - startFreq) / freqStep);
+        k2 = Math.round((k2 - startFreq) / freqStep);
+      } else if ('ppo' in response) {
+        const responsePpo = response.ppo;
+        k1 = Math.round(Math.log2(k1 / startFreq) * responsePpo);
+        k2 = Math.round(Math.log2(k2 / startFreq) * responsePpo);
       }
-      await postDelete(mCount + 1);
-      return targetArray;
+      const bytes = Uint8Array.from(atob(phase ? response.phase : response.magnitude), c => c.charCodeAt(0));
+      const buffer = bytes.buffer;
+      const data = new DataView(buffer);
+      const responseArray = [];
+      for (let k = k1; k <= k2; k++) {
+        const sumMagnitude = data.getFloat32(k * 4);
+        responseArray.push(sumMagnitude);
+      }
+      return responseArray;
     }
     function calculateRmsError(rpArray, targetArray, offset=0.0) {
+      if (rpArray.length === 0) { return Infinity; }
       let sumOfSquares = 0;
       for (let i = 0; i < rpArray.length; i++) {
         const diff = (rpArray[i] + offset) - targetArray[i];
@@ -10612,21 +10605,32 @@ zip.file("_micCal.txt", micCal);
       const meanOfSquares = sumOfSquares / rpArray.length;
       return Math.sqrt(meanOfSquares);
     }
+    function calculateLinearityScore(rpArray) {
+      if (rpArray.length === 0) { return -Infinity; }
+      function calculateSTD(arr) {
+        const mean = arr.reduce((acc, val) => acc + val, 0) / arr.length;
+        return Math.sqrt(
+          arr.reduce((acc, val) => acc + Math.pow(val - mean, 2), 0) /
+            (arr.length)
+        );
+      }
+      let magSum = rpArray.reduce((a, b) => a + b, 0);
+      return magSum / calculateSTD(rpArray);
+    }
+    async function getTargetArray(start, end, ppo=96) {
+      const measurements = await fetch_mREW();
+      const mCount = Object.keys(measurements).length;
+      await fetchSafe('target-level', 1, 75.0);
+      await postNext('Generate target measurement', 1);
+      const targetResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=${ppo}`, mCount + 1);
+      const targetArray = response2array(targetResponse, start, end);
+      await postDelete(mCount + 1);
+      return targetArray;
+    }
     async function getSubwooferTrim(noM, start=20, end=100, ppo=96) {
       const targetArray = await getTargetArray(start, end, ppo);
-      const subArray = [];
       const freqResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=${ppo}`, noM);
-      let startFreq = freqResponse.startFreq;
-      let k1 = start, k2 = end;
-      k1 = Math.round(Math.log2(k1 / startFreq) * ppo);
-      k2 = Math.round(Math.log2(k2 / startFreq) * ppo);
-      const bytes = Uint8Array.from(atob(freqResponse.magnitude), c => c.charCodeAt(0));
-      const buffer = bytes.buffer;
-      const data = new DataView(buffer);
-      for (let k = k1; k <= k2; k++) {
-        const splSub = data.getFloat32(k * 4)
-        subArray.push(splSub);
-      }
+      const subArray = response2array(freqResponse, start, end);
       let bestOffset = null;
       let lowestRmsError = Infinity;
       for (let offset = -12.5; offset <= 12.5; offset += 0.5) {
@@ -10640,19 +10644,8 @@ zip.file("_micCal.txt", micCal);
     }
     async function getSpeakerTrim(noM, start=250, end=4000, ppo=96) {
       const targetArray = await getTargetArray(start, end, ppo);
-      const spArray = [];
       const freqResponse = await fetchSafe(`frequency-response?smoothing=Psy&ppo=${ppo}`, noM);
-      let startFreq = freqResponse.startFreq;
-      let k1 = start, k2 = end;
-      k1 = Math.round(Math.log2(k1 / startFreq) * ppo);
-      k2 = Math.round(Math.log2(k2 / startFreq) * ppo);
-      const bytes = Uint8Array.from(atob(freqResponse.magnitude), c => c.charCodeAt(0));
-      const buffer = bytes.buffer;
-      const data = new DataView(buffer);
-      for (let k = k1; k <= k2; k++) {
-        const splSp = data.getFloat32(k * 4);
-        spArray.push(splSp);
-      }
+      const spArray = response2array(freqResponse, start, end);
       let bestOffset = null;
       let lowestRmsError = Infinity;
       for (let offset = -12.5; offset <= 12.5; offset += 0.5) {
@@ -10679,7 +10672,7 @@ zip.file("_micCal.txt", micCal);
       }
     }
     async function align4system(ind1, ind2, start=20, end=250, ppo=96) {
-      let isInverted = false, isPossible = false, requiredDelay = Infinity, bestFreq = NaN, excessPhase = Infinity, maxSum = -Infinity;
+      let isInverted = false, isPossible = false, requiredDelay = Infinity, bestFreq = NaN, maxSum = -Infinity;
       let loDelay = maxNegative;
       let hiDelay = maxPositive;
       let tempLo = 0; let tempHi = 0;
@@ -10705,25 +10698,8 @@ zip.file("_micCal.txt", micCal);
         if ((tempLo > 0 && delayB < tempLo) || (tempHi < 0 && delayB > tempHi)) { continue; };
 
         const tempSum = await fetchAlign(`aligned-frequency-response?smoothing=1%2F48&ppo=${ppo}`);
-        let startFreq = tempSum.startFreq;
-        let k1 = start, k2 = end;
-        if ('freqStep' in tempSum) {
-          let freqStep = tempSum.freqStep;
-          k1 = Math.round((k1 - startFreq) / freqStep);
-          k2 = Math.round((k2 - startFreq) / freqStep);
-        } else if ('ppo' in tempSum) {
-          const tempSumPpo = tempSum.ppo;
-          k1 = Math.round(Math.log2(k1 / startFreq) * tempSumPpo);
-          k2 = Math.round(Math.log2(k2 / startFreq) * tempSumPpo);
-        }
-        const bytes = Uint8Array.from(atob(tempSum.magnitude), c => c.charCodeAt(0));
-        const buffer = bytes.buffer;
-        const data = new DataView(buffer);
-        let magSum = 0;
-        for (let k = k1; k <= k2; k++) {
-          const splSum = data.getFloat32(k * 4);
-          magSum += splSum;
-        }
+        const tempSumArray = response2array(tempSum, start, end);
+        let magSum = tempSumArray.reduce((a, b) => a + b, 0);
         if (maxSum < magSum) {
           maxSum = magSum;
           bestFreq = checkFreq;
@@ -10738,15 +10714,14 @@ zip.file("_micCal.txt", micCal);
         const delayB = await fetchAlign('delay-b');
         requiredDelay = -parseFloat(delayB);
         isInverted = await fetchAlign('invert-b');
-        console.info(`Optimal alignment: @${bestFreq}Hz, required delay: ${(-1 * requiredDelay).toFixed(2)}ms, isInverted: ${isInverted}`);
+        console.infoUpdate(`Optimal alignment: @${bestFreq}Hz, required delay: ${(-1 * requiredDelay).toFixed(2)}ms, isInverted: ${isInverted}`);
         const alignedSum = await postAlign('Aligned sum');
         const parsed = JSON.parse(alignedSum.message);
         const key = Object.keys(parsed.results)[0];
         const sumIndex = parseInt(key);
-        excessPhase = await calcEP(sumIndex, start, end);
         await postDelete(sumIndex);
       }
-      return [isPossible, requiredDelay, isInverted, excessPhase];
+      return [isPossible, requiredDelay, isInverted];
     }
     async function alignMsub(ind1, ind2, loDelay, hiDelay, start=20, end=100, ppo=96) {
       let isInverted = false, isPossible = false, requiredDelay = NaN, sumIndex = null, bestFreq = NaN, bestScore = -Infinity;
@@ -10757,7 +10732,7 @@ zip.file("_micCal.txt", micCal);
       await postSafe("http://localhost:4735/alignment-tool/max-negative-delay", loDelay, "Maximum negative delay set to");
       await postSafe("http://localhost:4735/alignment-tool/max-positive-delay", hiDelay, "Maximum positive delay set to");
       console.info("Commencing in-depth frequency and SPL analysis...")
-      for (checkFreq = 20; checkFreq <= 250; checkFreq++) {
+      for (let checkFreq = 20; checkFreq <= 250; checkFreq++) {
         const postAlignResult = await postAlign('Align IRs', checkFreq);
         if (postAlignResult.message === 'Delay too large' && previousDelay != postAlignResult.delay) {
           previousDelay = postAlignResult.delay;
@@ -10767,35 +10742,9 @@ zip.file("_micCal.txt", micCal);
         const delayB = -parseFloat(await fetchAlign('delay-b'));
         if (noInversion && invertB) { continue; };
 
-        function calculateSTD(arr) {
-          const mean = arr.reduce((acc, val) => acc + val, 0) / arr.length;
-          return Math.sqrt(
-            arr.reduce((acc, val) => acc + Math.pow(val - mean, 2), 0) /
-              (arr.length)
-          );
-        }
         const tempSum = await fetchAlign(`aligned-frequency-response?smoothing=1%2F48&ppo=${ppo}`);
-        let startFreq = tempSum.startFreq;
-        let k1 = start, k2 = end;
-        if ('freqStep' in tempSum) {
-          let freqStep = tempSum.freqStep;
-          k1 = Math.round((k1 - startFreq) / freqStep);
-          k2 = Math.round((k2 - startFreq) / freqStep);
-        } else if ('ppo' in tempSum) {
-          const tempSumPpo = tempSum.ppo;
-          k1 = Math.round(Math.log2(k1 / startFreq) * tempSumPpo);
-          k2 = Math.round(Math.log2(k2 / startFreq) * tempSumPpo);
-        }
-        const bytes = Uint8Array.from(atob(tempSum.magnitude), c => c.charCodeAt(0));
-        const buffer = bytes.buffer;
-        const data = new DataView(buffer);
-        let magSum = 0, aSumArray = [];
-        for (let k = k1; k <= k2; k++) {
-          const sumMagnitude = data.getFloat32(k * 4);
-          aSumArray.push(sumMagnitude);
-          magSum += sumMagnitude;
-        }
-        const currScore = magSum / calculateSTD(aSumArray);
+        const tempSumArray = response2array(tempSum, start, end);
+        const currScore = calculateLinearityScore(tempSumArray);
         if (bestScore < currScore) {
           bestScore = currScore;
           bestFreq = checkFreq;
@@ -10810,7 +10759,7 @@ zip.file("_micCal.txt", micCal);
         const delayB = await fetchAlign('delay-b');
         requiredDelay = -parseFloat(delayB);
         isInverted = await fetchAlign('invert-b');
-        console.info(`Optimal alignment: @${bestFreq}Hz, required delay: ${(-1 * requiredDelay).toFixed(2)}ms, isInverted: ${isInverted}`);
+        console.infoUpdate(`Optimal alignment: @${bestFreq}Hz, required delay: ${(-1 * requiredDelay).toFixed(2)}ms, isInverted: ${isInverted}`);
         const measurements = await fetch_mREW();
         const mCount = Object.keys(measurements).length;
         const alignedSum = await postAlign('Aligned sum');
@@ -10820,7 +10769,7 @@ zip.file("_micCal.txt", micCal);
       }
       return [isPossible, requiredDelay, isInverted, sumIndex];
     }
-    async function calcEP(mNo, start=20, end=100) {
+    async function calcEP(mNo, start=30, end=80) {
       const measurements = await fetch_mREW();
       const mCount = Object.keys(measurements).length;
       await postNext('Excess phase version', mNo, {
@@ -10831,28 +10780,10 @@ zip.file("_micCal.txt", micCal);
         "replicate data": false
       });
       await postNext('Smooth', mCount + 1, { smoothing: "1/48" });
-      const phaseArray = [];
       const epResponse = await fetchSafe('frequency-response', mCount + 1);
-      const startFreq = epResponse.startFreq;
-      let k1 = start, k2 = end;
-      if ('freqStep' in epResponse) {
-        const freqStep = epResponse.freqStep;
-        k1 = Math.round((k1 - startFreq) / freqStep);
-        k2 = Math.round((k2 - startFreq) / freqStep);
-      } else if ('ppo' in epResponse) {
-        const epResponsePpo = epResponse.ppo;
-        k1 = Math.round(Math.log2(k1 / startFreq) * epResponsePpo);
-        k2 = Math.round(Math.log2(k2 / startFreq) * epResponsePpo);
-      }
-      const bytes = Uint8Array.from(atob(epResponse.phase), c => c.charCodeAt(0));
-      const buffer = bytes.buffer;
-      const data = new DataView(buffer);
-      for (let k = k1; k <= k2; k++) {
-        const xsPhase = data.getFloat32(k * 4)
-        phaseArray.push(xsPhase);
-      }
+      const phaseArray = response2array(epResponse, start, end, true);
       let sum = phaseArray.reduce((acc, val) => acc + Math.abs(val), 0);
-      sum /= (k2 - k1 + 1);
+      sum /= phaseArray.length;
       await postDelete(mCount + 1);
       return sum;
     }
